# pass-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  TODO.md
crates/pgp-wrapper/: Cargo.toml
crates/pgp-wrapper/src/: lib.rs
pass-rs/: Cargo.toml
pass-rs/crates/pgp-wrapper/: Cargo.toml
pass-rs/crates/pgp-wrapper/src/: lib.rs
pass-rs/src/: args.rs  commands.rs  main.rs  pgp_wrapper.rs  types.rs  utils.rs
pass-rs/src/commands/: find.rs  insert.rs  list.rs  show.rs
pass-rs/test_data/: README.md  set-envs
pass-rs/test_data/pass/: eek.gpg  foo.gpg  test-pass.gpg  test-pass.gpg.asc
pass-rs/test_data/pass/a/: b.gpg
pass-rs/wit/: wasi-clocks.wit
src/: main.rs
test_data/: priv.key  pub.key
test_data/pass/: .gpg-id
wit/: chrono.wit  pgp-wrapper.wit
