[package]
name = "pass-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
# wasmtime = { version = "5.0.0", features = ["component-model"] }
wasmtime = { path = "../github.com/bytecodealliance/wasmtime/crates/wasmtime", features = ["component-model"] }

[workspace]
members = [
  "crates/pgp-wrapper"
]
