[package]
name = "pass-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rand = "0.8"
wasmtime = { path = "../../github.com/bytecodealliance/wasmtime/crates/wasmtime", features = ["component-model"] }

[workspace]
members = [
  "crates/pgp-wrapper"
]

[profile.release]
# strip = true

[patch.crates-io]
chrono = { path = "../external_crates/chrono_0.4.23" }
iana-time-zone = { path = "../external_crates/iana-time-zone_0.1.53" }