[package]
name = "pass-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.4", features = ["derive", "env"] }
rand = "0.8"
rpassword = "7.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "ec6922ff2407bb81f148bd8b14ee66642ea38a5f", features = ["component-model"] }

[workspace]
members = [
  "crates/pgp-wrapper"
]

[profile.release]
# strip = true

[patch.crates-io]
chrono = { path = "../external_crates/chrono_0.4.23" }
iana-time-zone = { path = "../external_crates/iana-time-zone_0.1.53" }
