[package]
name = "pgp-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pgp = { path = "../../../github.com/rpgp/rpgp" }
wit-bindgen-guest-rust = { path = "../../../github.com/bytecodealliance/wit-bindgen/crates/guest-rust" }

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
lto = true
opt-level = 's'
