[package]
name = "pgp-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
# Added here just to force the feature "wasi-clocks-component-preview",
# not used in the lib directly.
chrono = { version = "0.4.23", default-features = false, features = ["wasi-clocks-component-preview"] }

getrandom = { version = "0.2", features = ["custom"] }

# Added here just to force the feature "dummy",
# not used in the lib directly.
getrandom_0_1 = { package = "getrandom", version = "0.1.16", features = ["dummy"] }

# Use our patched version that disables wasm32 web dependencies, force the feature "fallback"
iana-time-zone = { path = "crates/external/iana-time-zone_0.1.53", default-features = false, features = ["fallback"] }

pgp = { path = "../../../github.com/rpgp/rpgp", features = [] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
wit-bindgen-guest-rust = { path = "../../../github.com/bytecodealliance/wit-bindgen/crates/guest-rust" }

[lib]
crate-type = ["cdylib"]
